==> moricef/LoRa_APRS_Tracker/src/power_utils.cpp <==
#include <esp_log.h>
#include <esp_task_wdt.h>
#include <SPI.h>
#include "notification_utils.h"
#include "configuration.h"
#include "battery_utils.h"
#include "board_pinout.h"
#include "power_utils.h"
#include "lora_utils.h"
#include "ble_utils.h"
#include "gps_utils.h"
#include "display.h"
#include "../compat/arduino_compat.h"
    #define I2C_SDA 21
    #define I2C_SCL 22
    #define IRQ_PIN 35
    #define I2C0_SDA 17
    #define I2C0_SCL 18
    #define I2C1_SDA 42
    #define I2C1_SCL 41
    #define IRQ_PIN  40

    void externalPinSetup() {
        #ifdef HAS_I2S
            // T-Deck Plus uses I2S speaker, no GPIO buzzer pins needed
            if (Config.notification.buzzerActive && Config.notification.bootUpBeep) {
                NOTIFICATION_Utils::start();
            }
        #else
            if (Config.notification.buzzerActive && Config.notification.buzzerPinTone >= 0 && Config.notification.buzzerPinVcc >= 0) {
                compat_pinMode(Config.notification.buzzerPinTone, OUTPUT);
                compat_pinMode(Config.notification.buzzerPinVcc, OUTPUT);
                if (Config.notification.bootUpBeep) NOTIFICATION_Utils::start();
            } else if (Config.notification.buzzerActive && (Config.notification.buzzerPinTone < 0 || Config.notification.buzzerPinVcc < 0)) {
                ESP_LOGW(TAG, "Buzzer Pins not defined");
                while (1);
            }
        #endif

        if (Config.notification.ledTx && Config.notification.ledTxPin >= 0) {
            compat_pinMode(Config.notification.ledTxPin, OUTPUT);
        } else if (Config.notification.ledTx && Config.notification.ledTxPin < 0) {
            ESP_LOGW(TAG, "Led Tx Pin not defined");
            while (1);
        }

        if (Config.notification.ledMessage && Config.notification.ledMessagePin >= 0) {
            compat_pinMode(Config.notification.ledMessagePin, OUTPUT);
        } else if (Config.notification.ledMessage && Config.notification.ledMessagePin < 0) {
            ESP_LOGW(TAG, "Led Message Pin not defined");
            while (1);
        }

        if (Config.notification.ledFlashlight && Config.notification.ledFlashlightPin >= 0) {
            compat_pinMode(Config.notification.ledFlashlightPin, OUTPUT);
        } else if (Config.notification.ledFlashlight && Config.notification.ledFlashlightPin < 0) {
            ESP_LOGW(TAG, "Led Flashlight Pin not defined");
            while (1);
        }

        if (Config.ptt.active && Config.ptt.io_pin >= 0) {
            compat_pinMode(Config.ptt.io_pin, OUTPUT);
            compat_digitalWrite(Config.ptt.io_pin, Config.ptt.reverse ? HIGH : LOW);
        } else if (Config.ptt.active && Config.ptt.io_pin < 0) {
            ESP_LOGW(TAG, "PTT Pin not defined");
            while (1);
        }
    }

    void setup() {
        #ifdef HAS_NO_GPS
            disableGPS = true;
        #else
            disableGPS = Config.disableGPS;
        #endif

        #ifdef HAS_AXP192
            Wire.begin(SDA, SCL);
            if (begin(Wire)) {
                ESP_LOGI(TAG, "init done!");
            } else {
                ESP_LOGE(TAG, "init failed!");
            }
            activateLoRa();
            if (disableGPS) {
                deactivateGPS();
            } else {
                activateGPS();
            }
            activateMeasurement();
            PMU.setChargerTerminationCurr(XPOWERS_AXP192_CHG_ITERM_LESS_10_PERCENT);
            PMU.setChargeTargetVoltage(XPOWERS_AXP192_CHG_VOL_4V2);
            PMU.setChargerConstantCurr(XPOWERS_AXP192_CHG_CUR_780MA);
            PMU.setSysPowerDownVoltage(2600);
        #endif

        #ifdef HAS_AXP2101
            bool beginStatus = false;
            #ifdef TTGO_T_Beam_S3_SUPREME_V3
                Wire1.begin(I2C1_SDA, I2C1_SCL);
                Wire.begin(I2C0_SDA, I2C0_SCL);
                if (begin(Wire1)) beginStatus = true;
            #else
                Wire.begin(SDA, SCL);
                if (begin(Wire)) beginStatus = true;
            #endif
            if (beginStatus) {
                ESP_LOGI(TAG, "init done!");
            } else {
                ESP_LOGE(TAG, "init failed!");
            }
            activateLoRa();
            if (disableGPS) {
                deactivateGPS();
            } else {
                activateGPS();
            }
            activateMeasurement();
            PMU.setPrechargeCurr(XPOWERS_AXP2101_PRECHARGE_200MA);
            PMU.setChargerTerminationCurr(XPOWERS_AXP2101_CHG_ITERM_25MA);
            PMU.setChargeTargetVoltage(XPOWERS_AXP2101_CHG_VOL_4V2);
            PMU.setChargerConstantCurr(XPOWERS_AXP2101_CHG_CUR_800MA);
            PMU.setSysPowerDownVoltage(2600);
        #endif

        #ifdef BATTERY_PIN
            compat_pinMode(BATTERY_PIN, INPUT);
        #endif

        #ifdef VEXT_CTRL
            compat_pinMode(VEXT_CTRL,OUTPUT);
            vext_ctrl_ON();
        #endif

        #ifdef ADC_CTRL
            compat_pinMode(ADC_CTRL, OUTPUT);
        #endif

        #ifdef HELTEC_WIRELESS_TRACKER
            Wire.begin(BOARD_I2C_SDA, BOARD_I2C_SCL);
        #endif

        #if defined(HELTEC_V3_GPS) || defined(HELTEC_V3_TNC) || defined(HELTEC_V3_2_GPS) || defined(HELTEC_V3_2_TNC) || defined(HELTEC_WSL_V3_GPS_DISPLAY)
            Wire1.begin(BOARD_I2C_SDA, BOARD_I2C_SCL);
        #endif

        #if defined(TTGO_T_DECK_GPS) || defined(TTGO_T_DECK_PLUS)
            compat_pinMode(BOARD_POWERON, OUTPUT);
            compat_digitalWrite(BOARD_POWERON, HIGH);

            compat_pinMode(BOARD_SDCARD_CS, OUTPUT);
            compat_pinMode(RADIO_CS_PIN, OUTPUT);
            compat_pinMode(TFT_CS, OUTPUT);

            compat_digitalWrite(BOARD_SDCARD_CS, HIGH);
            compat_digitalWrite(RADIO_CS_PIN, HIGH);
            compat_digitalWrite(TFT_CS, HIGH);

            compat_delay(500);
            Wire.begin(BOARD_I2C_SDA, BOARD_I2C_SCL);
        #endif
    }

    void lowerCpuFrequency() {
        if (setCpuFrequencyMhz(80)) {
            ESP_LOGI(TAG, "CPU frequency lowered to %d MHz", getCpuFrequencyMhz());
        } else {
            ESP_LOGW(TAG, "CPU frequency unchanged");
        }
    }

    void shutdown() {
        // Disable watchdog before shutdown
        esp_task_wdt_delete(NULL);
        ESP_LOGI(TAG, "Watchdog disabled for shutdown");

        compat_delay(3000);
        ESP_LOGW(TAG, "SHUTDOWN !!!");
        #if defined(HAS_AXP192) || defined(HAS_AXP2101)
            if (Config.notification.shutDownBeep) NOTIFICATION_Utils::shutDownBeep();
            displayToggle(false);
            PMU.shutdown();
        #else
            if (Config.bluetooth.active && Config.bluetooth.useBLE) {
                BLE_Utils::stop();
            } /*else {
                // turn off BT classic ???
            }*/

            #ifdef VEXT_CTRL
                vext_ctrl_OFF();
            #endif

            #ifdef ADC_CTRL
                adc_ctrl_OFF();
            #endif

            #if defined(TTGO_T_DECK_GPS) || defined(TTGO_T_DECK_PLUS)
                compat_digitalWrite(BOARD_POWERON, LOW);
            #endif

            LoRa_Utils::sleepRadio();

            long DEEP_SLEEP_TIME_SEC = 1296000; // 15 days
            esp_sleep_enable_timer_wakeup(1000000ULL * DEEP_SLEEP_TIME_SEC);
            compat_delay(500);
            esp_deep_sleep_start();
        #endif
    }
